--- a/css/interactive.css
+++ b/css/interactive.css
@@ -8,10 +8,9 @@ body{
 
 }
 .filler-vid {
-	height:800px;
+	height:1080px;
 	background-color: #F9423A;
 	width:100%;
-	z-index:0;
 }
 
 .content-stop {
@@ -20,15 +19,28 @@ body{
 
 #map-stand {
 	position: fixed;
-	width: 475px;
+	width: 300px;
 	height: 400px;
 	top: 50px;
 	right: 15px;
 	background-color: blue;
-	z-index: 0;
+	z-index: 50;
+	border: 5px solid black;
 }
 
-.frames {
+#map {
+	position:absolute;
+	top:0;
+	left:0;
 	width: 100%;
 	height: 250px;
+	z-index: 500;
+}
+
+.marker {
+  background-color: #F9423A;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  cursor: pointer;
 }
