--- a/css/interactive.css
+++ b/css/interactive.css
@@ -11,30 +11,27 @@ body{
 	height:1080px;
 	background-color: #F9423A;
 	width:100%;
+	z-index:100;
 }
 
 .content-stop {
 	border: 1px solid blue;
 }
 
-#map-stand {
+#map-nav {
 	position: fixed;
-	width: 300px;
+	width: 400px;
 	height: 400px;
 	top: 50px;
 	right: 15px;
-	background-color: blue;
-	z-index: 50;
+	background-color: transparent;
+	z-index: -10;
 	border: 5px solid black;
 }
 
 #map {
-	position:absolute;
-	top:0;
-	left:0;
 	width: 100%;
-	height: 250px;
-	z-index: 500;
+	height: 100%;
 }
 
 .marker {
@@ -43,4 +40,9 @@ body{
   height: 10px;
   border-radius: 50%;
   cursor: pointer;
+}
+.marker-active{
+background-color:blue;
+width: 30px;
+height: 30px;
 }
