--- a/css/interactive.css
+++ b/css/interactive.css
@@ -21,17 +21,15 @@ body{
 #map-nav {
 	position: fixed;
 	width: 400px;
-	height: 400px;
 	top: 50px;
 	right: 15px;
-	background-color: transparent;
 	z-index:-40;
-	border: 5px solid black;
+	border: 1px solid black;
 }
 
 #map {
 	width: 100%;
-	height: 75%;
+	height: 300px;
 }
 
 .marker {
@@ -45,4 +43,8 @@ body{
 background-color:blue;
 width: 30px;
 height: 30px;
+}
+
+.travel-info {
+	padding-left: 20px;
 }
