--- a/css/interactive.css
+++ b/css/interactive.css
@@ -8,10 +8,11 @@ body{
 
 }
 .filler-vid {
+	position:relative;
 	height:1080px;
 	background-color: #F9423A;
 	width:100%;
-	z-index:100;
+	z-index:20;
 }
 
 .content-stop {
@@ -23,7 +24,7 @@ body{
 	width: 400px;
 	top: 50px;
 	right: 15px;
-	z-index:-40;
+	z-index:1;
 	border: 1px solid black;
 }
 
@@ -38,6 +39,7 @@ body{
   height: 10px;
   border-radius: 50%;
   cursor: pointer;
+  overflow: hidden !important;
 }
 .marker-active{
 background-color:blue;
@@ -49,14 +51,15 @@ height: 30px;
 	padding-left: 20px;
 }
 
-.modal-nav .modal-xl{
+.navigation-mapscreen .modal-xl-lenny{
 	max-width: 6000px !important;
 }
 
-.modal-nav .modal-open .modal{
+.navigation-mapscreen .modal-open .modal{
 	padding: 0px 20px 0px 20px !important;
 }
 
 #map2{
+	overflow: visible;
 	width: 100% !important;
 }
