--- a/_includes/roadtrip-interactive.html
+++ b/_includes/roadtrip-interactive.html
@@ -72,10 +72,11 @@
 				
 				</div><!--end of content stop-->
 				<div class="content-stop" id="bishop-ca">
-					<h2 class="text-left">6. Content for Bishop will go here</h2>
+					<h2 class="text-left">Bishop, California</h2>
 					{% include roadtrip-location.html image="Martinez_Bishop_4" caption="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." byline="Lenny Martinez Dominguez" %}
 					<br>
 					<p>@@ STEPHEN's VIDEO WILL GO HERE@@</p>
+					<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>
 				</div><!--end of content stop-->
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
@@ -92,12 +93,19 @@
 		<div class="row" id="cluster6">
 			<div class="col-xs-12 col-lg-7 offset-lg-1">
 				<div class="content-stop" id="virginia-city-nv">
-					<h2 class="text-left">8. Content for Virginia City will go here</h2>
-					<div class="filler">&nbsp;</div><br>
+					<h2 class="text-left">Virginia City, Nevada</h2>
+					<br><p>@@Insert a diptych of Virginia City</p><br>&nbsp;
+					<br>
+					{% include roadtrip-pullquote.html name="Wayne Douglas Tarrant" image="martinez_talkie_virginiacity_3" pullquote="“We’re bringing in too many different races. We have too much diversity. Other countries don’t open their border like we do, but now we’re in trouble with Muslims. We don’t really have a problem (with racism) up here. The only time we have problem is when we have some Arabs up here in their dress. They’re in full burka and people get very nervous. They don’t know if they have explosives underneath those outfits. All the merchants up here get nervous. There is a lot of people up here with guns and they’re standing at the ready in case there is a problem. It’s not fear, we’re fearless… I think it’s politics causing the problems. The politicians are causing the problems because of greed.”" %}
+					<br>
+					{% include roadtrip-pullquote.html name="Paul Coombes" image="martinez_talkie_virginiacity_1" pullquote="“I come from an ethnic family. My daughter, Zoe, is half African-American, so I am very sensitive to the topic of hate. I think all races have a lot of work to do. It’s better than it used to be, but we have a long way to go.”" %}
 				</div>
 				<div class="content-stop" id="stagecoach-nv">
-					<h2 class="text-left">9. Content for Stagecoach will go here</h2>
-					<div class="filler">&nbsp;</div><br>
+					<h2 class="text-left">Stagecoach, Nevada</h2>
+					<br><p>@@Insert a diptych of Stagecoach</p><br>&nbsp;
+					<br>
+					{% include roadtrip-talkie.html name="Brian Baldwin" image="martinez_talkie_stagecoach_1" description="Brian Baldwin was stocking produce at a gas station in Lyon County, Nevada when News21 met him. He said people are too “politically sensitive” today, and recalled a time when America was “pretty cool for a while there.” " %}
+					<br>
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
@@ -343,7 +351,7 @@
 						<div class="travel-info">
 							<h4 class="text-center"><span id="highway-name">Interstate 10 West</span></h4>
 							<p class="text-center"><span id="city-name">Phoenix</span>,&nbsp;<span id="state-name">Arizona</span><br>				
-							Population: <span id="stop-population">1,555,324</span></p>
+							<span id="population">Population:&nbsp;<span id="stop-population">1,555,324</span></span></p>
 							<br>
 						</div>
 						</a>
