build mobile bar for interactive

--- a/_includes/roadtrip-pullquote.html
+++ b/_includes/roadtrip-pullquote.html
@@ -10,7 +10,7 @@ To include in story: {% include roadtrip-pullquote.html name="Name of the people
 	<img src="/img/roadtrip/talkie/{{ include.image }}.jpg" class="img-fluid" alt="" />
 	</div>
 	<div class="col-6">
-		<h3 class="talkie-head">Meet {{ include.name }}</h3>
+		<h3 class="talkie-head">{{ include.name }}</h3>
 		<p>{{ include.pullquote }}</p>
 	</div>
 </div><!--end of talkie row-->
