--- a/_includes/roadtrip-video.html
+++ b/_includes/roadtrip-video.html
@@ -1,11 +1,11 @@
 {% comment %}
 
-To include in story: {% include roadtrip-video.html video="Name of the people in the talkie" %}
+To include in story: {% include roadtrip-video.html video="Name of the video" %}
 
 
 {% endcomment %}
 
-<video class="driving-video" muted autoplay loop>
-  <source src="/img/roadtrip/roadvideo/{{ include.video }}.mp4" type="video/mp4">
+<video class="roadtrip-video" controls preload>
+  <source src="/img/roadtrip/video/{{ include.video }}.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
