add highway 50 east for mobile nav

--- a/_includes/roadtrip-interactive.html
+++ b/_includes/roadtrip-interactive.html
@@ -47,6 +47,13 @@
 							<a href="#bishop-ca" class="list-group-item list-group-item-action">Bishop, California</a>
 							</div>
 						</li>
+						<li class="list-group-item">Highway 50 East</li>
+					  <li class="list-group-item">
+							<div class="list-group list-group-flush">
+							<a href="#virginia-city-nv" class="list-group-item list-group-item-action">Virginia City, Nevada</a>
+							<a href="#stagecoach-nv" class="list-group-item list-group-item-action">Stagecoach, Nevada</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 				</div>
