--- a/_includes/roadtrip-drivingvideo.html
+++ b/_includes/roadtrip-drivingvideo.html
@@ -1,6 +1,6 @@
 {% comment %}
 
-To include in story: {% include roadtrip-drivevideo.html video="name of the video file" %}
+To include in story: {% include roadtrip-drivingvideo.html video="name of the video file" %}
 
 
 {% endcomment %}
