--- a/_includes/roadtrip-talkie.html
+++ b/_includes/roadtrip-talkie.html
@@ -6,10 +6,10 @@ To include in story: {% include roadtrip-talkie.html name="Name of the people in
 {% endcomment %}
 
 <div class="row">
-	<div class="col-lg-6 col-sm-12">
+	<div class="col-sm-12 col-xl-6 ">
 	<img src="/img/roadtrip/talkie/{{ include.image }}.jpg" class="img-fluid" alt="{{ include.caption }}" />
 	</div>
-	<div class="col-lg-6 col-sm-12">
+	<div class="col-sm-12 col-xl-6 ">
 		<h3 class="talkie-head">Meet {{ include.name }}</h3>
 		<p>{{ include.description }}</p>
 		<button class="btn btn-primary">SOUND CITE &THORN;</button>
