--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,8 @@
     <link href="{{ site.url }}/css/mapbox-gl.css" rel="stylesheet"> <!--Lenny added this-->
     <link href="{{ site.url }}/css/main.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Frank+Ruhl+Libre:700,900|Oswald:600,700|Source+Code+Pro" rel="stylesheet">  <!--Lenny added this-->
+    <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:700,900|Oswald:600,700|Roboto+Mono:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,600,700,800" rel="stylesheet">
 
 
     <script src="{{ site.url }}/js/jquery.min.js"></script>
