--- a/_includes/roadtrip-pullquote.html
+++ b/_includes/roadtrip-pullquote.html
@@ -7,7 +7,7 @@ To include in story: {% include roadtrip-pullquote.html name="Name of the people
 
 <div class="row">
 	<div class="col-sm-12 col-md-6">
-	<img src="/img/roadtrip/talkie/{{ include.image }}.jpg" class="img-fluid" alt="{{ include.caption }}" />
+	<img src="/img/roadtrip/pullquote/{{ include.image }}.jpg" class="img-fluid" alt="{{ include.caption }}" />
 	</div>
 	<div class="col-sm-12 col-md-6">
 		<h3 class="talkie-head">{{ include.name }}</h3>
