--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,16 +14,17 @@ $captions: #3e3e3e;
 $darkblue: #262b3f;
 
 $sansserif: Roboto, 'Helvetica Neue', helvetica, arial, sans-serif;
-$herofont: Roboto, 'Helvetica Neue', helvetica, arial, sans-serif;
+$herofont: 'EB Garamond',  Georgia, Times, serif;
 $captionfont: 'Roboto Condensed', Georgia, Times, serif;
 $bodytext: 'EB Garamond',  Georgia, Times, serif;
+
 
 $font-frank: 'Frank Ruhl Libre', Georgia, Times, serif;;
 $font-avheavy : 'AvenirNext-Heavy', arial, sans-serif;
 $font-avbold: 'AvenirNext-Bold', arial, sans-serif;
 $font-source: 'Source Code Pro', monospace;
 $font-oswald: 'Oswald', helvetica, arial, sans-serif;
-$font-garamond: 'EB Garamond',  Georgia, Times, serif;
+
 
 
 body {
@@ -102,6 +103,7 @@ body {
   padding-right: 10px;
   padding-bottom: 10px;
   margin-bottom: 0;
+    font-weight: bold;
 }
 
 .navbar
@@ -137,8 +139,8 @@ body {
 .story-author p
 {
     color: white;
-    margin-right: 20px;
-    font-family: $font-source;
+    margin-top: 20px;
+    font-family: $font-avbold;
 }
 
 .storyfooter-social {
@@ -210,9 +212,10 @@ body {
 }
 
 .caption {
-  font-family: $captionfont;
-  color: $grey;
+  font-family: $bodytext;
+  color: $textcolor;
   padding-top: 10px;
+  font-style: italic;
 }
 
 .pinfooter {
@@ -248,6 +251,7 @@ h2.subhead {
       height: 100%;
       padding: 0;
       margin:0;
+     max-width: 100% !important;
 
 }
 .img-modal .modal-content {
@@ -256,6 +260,7 @@ h2.subhead {
       overflow:auto;
       background: black;
 }
+
 .img-modal .close {
   color: $background;
   opacity: 1.0;
@@ -267,6 +272,7 @@ h2.subhead {
 
 .img-modal .caption {
   padding-left: 20px;
+  color: $background;
 }
 
 a:hover span.enlarger {
@@ -378,6 +384,16 @@ span.enlarger {
     
 }
 
+#hp-main-image
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 50%;
+    height: auto;
+    transform: translate(-50%,-50%);
+}
+
 .hp-images
 {
     filter: grayscale(100%);
@@ -464,9 +480,9 @@ span.enlarger {
 }
 .story-header h1
 {
-     color: white;
-    font-family: $font-frank;
-    font-weight: 900;
+    color: white;
+    font-family: $herofont;
+    font-weight: bold;
 }
 .thickborder
 {
