update byline format on roadtrip-location component

--- a/_includes/roadtrip-location.html
+++ b/_includes/roadtrip-location.html
@@ -6,4 +6,4 @@ To include in story: {% include roadtrip-location.html image="image name in the 
 {% endcomment %}
 
 <img class="img-fluid" src="/img/roadtrip/locations/{{ include.image }}.jpg" style="width:100%;" alt="{{ include.caption }}">
-<p><span class="img-caption">{{ include.caption }}</span><br>({{ include.byline }}/News21)</p>
+<p><span class="img-caption">{{ include.caption }}&nbsp;({{ include.byline }}/News21)</span></p>
